--- a/app/src/main/res/layout/activity_game_two.xml
+++ b/app/src/main/res/layout/activity_game_two.xml
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <ImageView
             android:id="@+id/GameOneImg"
             android:layout_width="match_parent"
@@ -25,39 +26,38 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/bloodborne" />
-
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/elden_ring" />
 
         <TextView
             android:id="@+id/textOverlay"
             android:layout_width="297dp"
             android:layout_height="110dp"
             android:layout_margin="16dp"
+            android:background="@drawable/rounded_title"
             android:gravity="center"
-            android:text="Bloodborne"
+            android:text="Elden Ring"
             android:textColor="@android:color/white"
             android:textSize="50dp"
             android:textStyle="bold"
-            android:background="@drawable/rounded_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.236" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="314dp"
             android:layout_height="169dp"
-            android:text="TEXTO SOBRE BLOODBORNE"
             android:background="@drawable/rounded_title"
+            android:text="TEXTO SOBRE ELDEN RING"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.549" />
+            app:layout_constraintVertical_bias="0.654" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
