--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -30,16 +30,16 @@
 
 
         <TextView
-            android:id="@+id/textOverlay"
+            android:id="@+id/GameTwoTitulo"
             android:layout_width="297dp"
-            android:layout_height="110dp"
+            android:layout_height="75dp"
             android:layout_margin="16dp"
+            android:background="@drawable/rounded_title"
             android:gravity="center"
             android:text="Bloodborne"
             android:textColor="@android:color/white"
             android:textSize="50dp"
             android:textStyle="bold"
-            android:background="@drawable/rounded_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/GameTwoTexto"
             android:layout_width="314dp"
             android:layout_height="169dp"
             android:text="TEXTO SOBRE BLOODBORNE"
