--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/GameOneImg"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="531dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
 
 
         <TextView
-            android:id="@+id/GameTwoTitulo"
+            android:id="@+id/GameOneTitulo"
             android:layout_width="297dp"
             android:layout_height="75dp"
             android:layout_margin="16dp"
@@ -47,17 +47,30 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
+
             android:id="@+id/GameTwoTexto"
-            android:layout_width="314dp"
-            android:layout_height="169dp"
+            android:layout_width="match_parent"
+            android:layout_height="205dp"
+            android:background="@color/black"
             android:text="TEXTO SOBRE BLOODBORNE"
-            android:background="@drawable/rounded_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.549" />
+            app:layout_constraintVertical_bias="1" />
+
+        <Button
+            android:id="@+id/ButtonBackOne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/GameOneImg"
+            app:layout_constraintVertical_bias="0.898" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
