--- a/app/src/main/res/layout/activity_game_three.xml
+++ b/app/src/main/res/layout/activity_game_three.xml
@@ -15,23 +15,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <ImageView
             android:id="@+id/GameThreeImg"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="531dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/sekiro" />
+
 
         <TextView
             android:id="@+id/GameThreeTitulo"
-            android:layout_width="342dp"
+            android:layout_width="297dp"
             android:layout_height="75dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_title"
@@ -42,23 +42,23 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.13" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
+
             android:id="@+id/GameThreeTexto"
-            android:layout_width="314dp"
-            android:layout_height="169dp"
-            android:background="@drawable/rounded_title"
+            android:layout_width="match_parent"
+            android:layout_height="205dp"
+            android:background="@color/black"
             android:text="TEXTO SOBRE SEKIRO"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.673" />
+            app:layout_constraintVertical_bias="1" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
