--- a/app/src/main/res/layout/activity_game_one.xml
+++ b/app/src/main/res/layout/activity_game_one.xml
@@ -70,7 +70,12 @@
             app:layout_constraintHorizontal_bias="0.95"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/GameOneImg"
-            app:layout_constraintVertical_bias="0.898" />
+            app:layout_constraintVertical_bias="0.898"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
